# workmind7

./: .gitattributes  .gitignore  CLAUDE.md  PRODUCTION-READINESS.md  README.md  docker-compose-python.yml  docker-compose.yml  pyproject.toml
server-py/: .dockerignore  .env  .env.example  Dockerfile  docker-entrypoint.sh  install.bat  pyproject.toml  pytest.ini  requirements.linux-cpu.lock.txt  requirements.txt  start.bat
server-py/alembic/: env.py
server-py/alembic/versions/: 001_baseline.py  002_business_integrity.py  003_schema_alignment.py  004_integrity_and_indexes.py
server-py/app/: __init__.py  config.py  main.py  middleware.py
server-py/app/auth/: __init__.py  dependencies.py  jwt.py  middleware_utils.py  models.py  token_store.py  users.py
server-py/app/clients/: __init__.py  tavily_client.py
server-py/app/core/: __init__.py  database.py  redis_client.py
server-py/app/models/: __init__.py  entities.py
server-py/app/routes/: __init__.py  agent.py  auth.py  chat.py  config.py  erp.py  health.py  knowledge.py  monitor.py  prompt.py  workflow.py
server-py/app/schemas/: __init__.py  requests.py
server-py/app/services/: __init__.py  budget_guard.py  cache.py  interceptor.py  model.py  pricing.py  usage_monitor.py  user_seed.py
server-py/app/utils/: __init__.py  agent_context.py  background_tasks.py  business_time.py  errors.py  file_validate.py  json_extract.py  (+7 more)
server-py/scripts/: generate_golden_dataset.py  init_db.py  init_pgvector.sql  regenerate_linux_cpu_lock.sh  run_rag_eval.py  seed_users.py
server-py/tests/: README.md  conftest.py
(+175 files in other folders)
